# BuFFI

./: Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
buffi/: Cargo.toml  LICENSE-APACHE2
buffi/src/: buffi_annotation_attributes.rs  lib.rs  traits.rs
buffi_macro/: Cargo.toml
buffi_macro/src/: annotation.rs  buffi_annotation_attributes.rs  lib.rs  proc_macro.rs
example/buffi_example/: Cargo.toml
example/buffi_example/src/: errors.rs  lib.rs
example/buffi_example/src/include/: BUFFI_NAMESPACE.hpp  buffi_example_api_functions.hpp  buffi_example_free_standing_functions.hpp  buffi_example_testclient.hpp
example/generate_bindings/: Cargo.toml  api_config.toml
example/generate_bindings/src/: main.rs
src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
