[package]
name = "buffi"
description = "A tool to generate ergonomic, buffer-based C++ APIs."
version = "0.3.7+rust.1.92.0"
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/buffi"
repository = "https://github.com/GiGainfosystems/BuFFI"
keywords = ["FFI", "API", "C", "bincode", "serde"]
categories = ["development-tools::ffi"]
readme = "../README.md"

[dependencies.buffi_macro]
version = "=0.3.7"
path = "../buffi_macro"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-generate = { version = "0.32.0", default-features = false, features = ["cpp"] }
serde-reflection = "0.5.0"
rustdoc-types = "0.56.0"
bincode = { version = "2.0.1", features = ["std", "serde"], default-features = false }

[features]
with_c_api = ["buffi_macro/with_c_api"]
with_tracing = ["buffi_macro/with_tracing"]
default = ["with_c_api"]
