[package]
name = "buffi_macro"
description = "A proc-macro to generate ergonomic, buffer-based C++ APIs."
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/buffi_macro"
repository = "https://github.com/GiGainfosystems/BuFFI/"
keywords = ["FFI", "API", "C", "bincode", "serde"]
categories = ["development-tools::ffi"]
readme = "../README.md"

[dependencies]
proc-macro2 = "1.0.95"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
quote = "1.0.40"

[lib]
proc-macro = true

[features]
with_c_api = []
with_tracing = []
default = ["with_c_api"]
