[package]
name = "buffi_example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
buffi_macro = { path = "../../buffi_macro" }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
cgmath = { version = "0.18.0", features = ["serde"] }